--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 
 {
-    "name": "react-drawing",
+    "name": "anhdn93/react-drawing",
     "description": "A simple drawing module.",
     "type": "react-drawing",
     "version": "1.0.0"
